--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.11",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
