--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,8 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
+    "emitDecoratorMetadata": true,
+"experimentalDecorators": true,
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   }
 }
